<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.appointment.AppointmentListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_appointment_list" >

        <action
            android:id="@+id/action_fragment_appointment_dashboard_to_fragment_new_appointment"
            app:destination="@+id/navigation_new_appointment"/>

        <action
            android:id="@+id/action_fragment_appointment_list_to_appointment_bill_detail"
            app:destination="@+id/navigation_appointment_bill"/>

        <action
            android:id="@+id/action_fragment_appointment_dashboard_to_navigation_create_appointment"
            app:destination="@+id/navigation_create_appointment"/>


    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.customerlist.CustomerListFragment"
        android:label="@string/title_customer_list"
        tools:layout="@layout/fragment_customer_list" >
        <action
            android:id="@+id/action_fragment_customer_list_to_fragment_new_customer"
            app:destination="@+id/navigation_add_customer"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_add_customer"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.customer.EditCustomerFragment"
        android:label="@string/title_add_customer"
        tools:layout="@layout/fragment_customer_add" >
        <argument
            android:name="customer"
            app:argType="com.bodakesatish.sandhyasbeautyservices.domain.model.Customer"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_category_list"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.category.CategoryListFragment"
        android:label="@string/title_category_list"
        tools:layout="@layout/fragment_category_list" >

        <action
            android:id="@+id/action_fragment_category_list_to_fragment_edit_category"
            app:destination="@+id/navigation_add_category"/>

        <action
            android:id="@+id/action_fragment_category_list_to_fragment_service_list"
            app:destination="@+id/navigation_service_list"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_add_category"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.category.EditCategoryFragment"
        android:label="@string/title_add_customer"
        tools:layout="@layout/fragment_customer_add">

        <argument
            android:name="category"
            app:argType="com.bodakesatish.sandhyasbeautyservices.domain.model.Category"
            app:nullable="true"
            android:defaultValue="@null"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_service_list"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.services.ServiceListFragment"
        android:label="@string/title_service_list"
        tools:layout="@layout/fragment_service_list" >
        <action
            android:id="@+id/action_fragment_service_list_to_fragment_new_service"
            app:destination="@+id/navigation_add_service"/>
        <argument
            android:name="category"
            app:argType="com.bodakesatish.sandhyasbeautyservices.domain.model.Category" />

    </fragment>

    <fragment
        android:id="@+id/navigation_add_service"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.services.EditServiceFragment"
        android:label="@string/title_add_service"
        tools:layout="@layout/fragment_add_edit_service" >
        <argument
            android:name="service"
            app:argType="com.bodakesatish.sandhyasbeautyservices.domain.model.Service"
            app:nullable="true"
            android:defaultValue="@null"/>
        <argument
            android:name="category"
            app:argType="com.bodakesatish.sandhyasbeautyservices.domain.model.Category" />

    </fragment>


    <fragment
        android:id="@+id/navigation_appointment_bill"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.appointment.AppointmentSummaryFragment"
        android:label="@string/bill_detail"
        tools:layout="@layout/fragment_appointment_details" >

        <action
            android:id="@+id/action_appointmentBillDetailFragment_to_navigation_create_appointment"
            app:destination="@+id/navigation_create_appointment"/>

        <action
            android:id="@+id/action_appointmentBillDetailFragment_to_addServicesToAppointmentFragment"
            app:destination="@+id/navigation_add_services_to_appointment"/>

        <action
            android:id="@+id/action_appointmentBillDetailFragment_to_BillingFragment"
            app:destination="@+id/navigation_billing"/>

        <argument
            android:name="appointmentId"
            app:argType="integer"
            android:defaultValue="0"/>

    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/navigation_appointment_details"-->
<!--        android:name="com.bodakesatish.sandhyasbeautyservices.ui.appointment.AppointmentBillDetailFragment"-->
<!--        android:label="Appointment and Bill Detail"-->
<!--        tools:layout="@layout/fragment_appointment_details" >-->

<!--        <action-->
<!--            android:id="@+id/temp"-->
<!--            app:destination="@+id/navigation_create_appointment"/>-->

<!--        <action-->
<!--            android:id="@+id/nav_to_billing"-->
<!--            app:destination="@+id/navigation_billing"/>-->

<!--        <argument-->
<!--            android:name="appointmentId"-->
<!--            app:argType="integer"-->
<!--            android:defaultValue="0"/>-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/navigation_billing"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.billing.BillEditorFragment"
        android:label="Billing"
        tools:layout="@layout/fragment_billing" >
        <argument
            android:name="appointmentId"
            app:argType="integer"
            android:defaultValue="0"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_add_services_to_appointment"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.appointment.EditAppointmentServicesFragment"
        android:label="Service"
        tools:layout="@layout/fragment_edit_appointment_services" >
        <argument
            android:name="appointmentId"
            app:argType="integer"
            android:defaultValue="0"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_create_appointment"
        android:name="com.bodakesatish.sandhyasbeautyservices.ui.appointment.AppointmentEditFragment"
        android:label="@string/title_add_appointment"
        tools:layout="@layout/fragment_appointment_edit" >
        <action
            android:id="@+id/action_createOrEditAppointmentFragment_to_appointmentBillDetailFragment"
            app:destination="@+id/navigation_appointment_bill"
            app:popUpTo="@+id/navigation_create_appointment"
            app:popUpToInclusive="true" />
        <!-- Other actions -->
        <argument
            android:name="appointmentId"
            app:argType="integer"
            android:defaultValue="0"/>
    </fragment>

    <fragment
        android:id="@+id/login"
        android:name="com.bodakesatish.sandhyasbeautyservices.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/login_to_register"
            app:destination="@+id/register"/>
        <action
            android:id="@+id/login_to_home"
            app:destination="@+id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/register"
        android:name="com.bodakesatish.sandhyasbeautyservices.signup.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/register_to_home"
            app:destination="@+id/navigation_home"/>
        <action
            android:id="@+id/register_to_login"
            app:destination="@+id/login"/>
    </fragment>
</navigation>